fixed issue where scroll to top button was not centered

--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -117,6 +117,10 @@
 		margin-right: 2rem;
 	}
 
+	&__link-tag {
+		@include flexCenter(center, center);
+	}
+
 	&__link {
 		display: grid;
 		grid-template-columns: 1fr max-content 1fr;
